feat(admin): change create destination
